--- a/css/style.css
+++ b/css/style.css
@@ -1,226 +1,437 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 body {
-    background: #621402;
-    font-family: "Roboto", sans-serif;
-    color: #fff;
+  background: #621402;
+  font-family: 'Roboto', sans-serif;
+  color: #ffffff;
 }
+
 .container {
-    max-width: 1170px;
-    margin: auto;
+  margin: auto;
+  max-width: 1170px;
+  width: 90%
 }
+
 .header {
-    min-height: 100vh;
-    background: linear-gradient(180deg, rgba(98, 20, 2, 0.31) 0%, #621402 85.62%),
-     url('../img/bg.jpg')no-repeat center top /cover;
+  padding-bottom: 60px;
+  background: linear-gradient(180deg, rgba(98, 20, 2, 0.31) 0%, #621402 85.62%),
+    url('../img/bg.jpg') no-repeat center top / cover;
 }
+
 .navbar {
-    display: flex;
-    align-items: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
+  display: flex;
+  align-items: center;
+  padding: 30px 0;
 }
+
+.m-menu {
+  display: none;
+}
+
 .menu {
-    list-style: none;
-    display: flex;
-    margin: 0;margin-left: 17px;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  margin-left: 17px;
 }
-.menu-iten {
-    margin-right: 25px;
+
+.menu-item {
+  margin-right: 25px;
 }
+
 .menu-link {
-    color: #fff;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
+
 .user {
-    margin-left: auto;
-    color: #fff;
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
 }
+
 .avatar {
-    width: 33px;
-    height: 33px; 
-    border-radius: 50%;
-    margin-left: 11px;
+  width: 33px;
+  height: 33px;
+  border-radius: 50%;
+  margin-left: 11px;
 }
 
 .film {
-    margin-top: 60px;
-    color: #fff; 
-    display: flex;
-    align-items: center;
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
 }
+
 .film-title-small {
-    opacity: 0.5;
-    font-size: 23px;
-    line-height: 150%;
+  opacity: 0.5;
+  font-size: 24px;
+  line-height: 150%;
 }
+
 .film-title {
-    font-size: 36px;
-    line-height: 41px;
-    margin-top: 11px;
-    margin-bottom: 23px;
+  font-size: 36px;
+  line-height: 42px;
+  margin-top: 11px;
+  margin-bottom: 23px;
 }
+
 .film-description {
-    font-size: 16px;
-    line-height: 150%;
-    max-width: 560px;
+  font-size: 16px;
+  line-height: 150%;
+  max-width: 570px;
 }
+
 .film-trailer {
-    margin: auto;
+  margin: auto;
 }
+
 .film-details {
-    margin-top: 50px;
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
 }
+
 .time {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
-.time-icon {
-    margin-right: 14px;
-}
-.rating {
-    display: flex;
-    align-items: center;
-    margin-left: 34px;
-}
+
+.time-icon,
 .rating-icon {
-    margin-right: 14px;
+  margin-right: 14px;
 }
+
+.rating {
+  display: flex;
+  align-items: center;
+  margin-left: 34px;
+}
+
 .rating-current {
-    font-size: 23px;
-    line-height: 150%;
+  font-size: 24px;
+  line-height: 150%;
 }
+
 .session {
-    margin-top: 62px;
-    padding-top: 46px;
-    padding-bottom: 63px;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-top: 62px;
+  padding-top: 46px;
+  padding-bottom: 64px;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  margin-bottom: 63px;
 }
+
 .session-label {
-    display: block;
-    margin-bottom: 20px;
+  display: block;
+  margin-bottom: 20px;
 }
+
 .session-date-block {
-    display: flex;
+  display: flex;
 }
 
 .session-date-item {
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
-    text-align: center;
-    width: 90px;
-    height: 90px;
-    align-items: center;
-    justify-content: center;
-    margin-right: 15px;
-    transition: background-color 0.2s;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  text-align: center;
+  width: 90px;
+  height: 90px;
+  align-items: center;
+  justify-content: center;
+  margin-right: 15px;
+  cursor: pointer;
+  transition: background-color 0.2s;
 }
-.session-month {
-    font-size: 16px;
-    line-height: 18,75px;
-}
-.session-day {
-    font-family: 900;
-    font-size: 30px;
-    line-height: 35px;
-}
-.session-week{
-    font-size: 19px;
-    line-height: 22px;
-}
-.session-date-item:hover {
-    background-color: #FE8E05;
-    color: #621402;
-}
-.select {
 
-    background: rgba(255, 255, 255, 0.14);   
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
-    color: #fff;
-    padding: 18px;
-    cursor: pointer;
-    margin-top: 15px;
+.session-month {
+  font-size: 16px;
+  line-height: 19px;
 }
-.select-cinema{
-    min-width: 470px; 
+
+.session-day {
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 35px;
 }
+
+.session-week {
+  font-size: 19px;
+  line-height: 22px;
+}
+
+.session-date-item:hover {
+  background-color: #FE8E05;
+  color: #621402;
+}
+
+.select {
+  background-color: rgba(255, 255, 255, 0.15);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  color: #ffffff;
+  padding: 18px;
+  margin-top: 13px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url('../img/arrow.svg') no-repeat top 50% right 18px / 14px;
+}
+
+/* удаление стрелки по умолчанию в IE 10 и 11 */
+select::-ms-expand {
+  display: none;
+}
+
+/* Цвет списка для Google Chrome */
+option {
+  color: #ffffff;
+  background-color: rgba(120, 54, 38, 0.8);
+}
+
+.select-cinema {
+  width: 470px;
+}
+
+.select-time {
+  min-width: 120px;
+}
+
 .scheme {
-    margin-bottom: 40px;
-    background: rgba(36, 36, 36, 0.18);
-    border-radius: 10px;
+  background: rgba(36, 36, 36, 0.18);
+  border-radius: 10px;
 }
 
 .scheme path:not(.light) {
-    fill: rgba(255, 255, 255, 0.2);
-    cursor: pointer;
+  fill: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
 
+.scheme-svg {
+  max-width: 1170px;
 }
+
 .scheme path:not(.light):hover {
-    fill: rgba(255, 255, 255, 0.5);
+  fill: rgba(255, 255, 255, 0.5);
 }
+
 .scheme path.booked,
 .scheme path.booked:hover {
-    fill: rgba(255, 255, 255, 0.5);
-    cursor: not-allowed;
+  fill: rgba(255, 255, 255, 0.05);
+  cursor: not-allowed;
 }
+
 .scheme path.active,
 .scheme path.active:hover {
-    fill: #FE8E05;
+  fill: #FE8E05;
 }
+
 .legend {
-    display: flex;
-    align-items: center;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    max-width: 1024px;
-    margin: auto;
-    padding-top: 22px;
-    padding-bottom: 38px;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  max-width: 1024px;
+  width: 90%;
+  margin: auto;
+  padding-top: 22px;
+  padding-bottom: 38px;
 }
+
 .legend-label {
-    display: flex;
-    align-items: center;
-    margin-right: 30px;
-    color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+  color: rgba(255, 255, 255, 0.5);
 }
+
 .legend svg {
-    margin-right: 15px;
+  width: 38px;
+  margin-right: 15px
 }
+
 .price {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  padding-top: 62px;
+  padding-bottom: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
 .price-label {
-    display: block;
-    font-size: 18px;
-    line-height: 21px;
+  display: block;
+  font-size: 18px;
+  line-height: 21px;
 }
+
 .price-tag {
-    font-size: 52px; 
-    line-height: 59px;
+  font-size: 52px;
+  line-height: 61px;
 }
+
 .button {
+  background: #FE8E05;
+  border-radius: 5px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+  padding: 24px 54px;
+  text-decoration: none;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+  }
+
+  .select-cinema {
+    width: 300px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+
+  .session {
+    flex-wrap: wrap;
+  }
+
+  .session-date {
+    flex-basis: 70%;
+    margin-bottom: 40px;
+  }
+
+  .session-cinema {
+    order: 3;
+  }
+
+  .menu-item {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 560px;
+  }
+
+  .nav {
+    position: relative;
+  }
+
+  .menu {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    padding: 20px;
+    margin-left: 20px;
+    flex-direction: column;
+    background-color: #621402;
+    z-index: 10;
+    border-radius: 10px;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-100%);
+    transition: opacity 0.5s, transform 0.5s;
+  }
+
+  .menu-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+
+  .m-menu {
     display: block;
-    background: #FE8E05;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 18px;
-    line-height: 21px;
-    padding: 23px 52px;
-    text-decoration: none;
+    background-color: transparent;
+    border: none;
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    cursor: pointer;
+  }
+
+  .is-open {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+
+  .film {
+    flex-direction: column;
+  }
+
+  .film-trailer {
+    margin-top: 40px;
+    margin-right: auto;
+    margin-left: 0;
+  }
+}
+
+
+@media (max-width: 620px) {
+  .legend {
+    flex-wrap: wrap;
+    padding-bottom: 10px;
+  }
+
+  .legend svg {
+    width: 25px;
+  }
+
+  .legend-label {
+    margin-bottom: 15px;
+  }
+
+
+}
+
+@media (max-width: 480px) {
+  .session {
+    margin-bottom: 5px;
+    align-items: center;
+  }
+
+  .session-date-item {
+    width: 75px;
+  }
+
+  .session-time {
+    margin-right: 15px;
+    margin-bottom: 40px;
+  }
+
+  .button {
+    padding: 24px
+  }
+}
+
+@media (max-width: 380px) {
+  .session-date-block {
+    flex-wrap: wrap;
+  }
+
+  .session-date-item {
+    margin-bottom: 15px
+  }
+
+  .select-cinema {
+    width: 280px;
+  }
+
+  .price {
+    flex-wrap: wrap;
+  }
+
+  .price-tag {
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
 }
